"ChangeLog"

2007-08-16	David Fang	<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-81-53:
	  Remove obsolete references to configured test scripts.


2007-08-15	David Fang	<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-81-52:
	  Check for 'info' and AM_CONDITIONAL HAVE_INFO for installcheck.


	* HACKT-00-01-04-main-00-81-50:
	  Make.stddef: define EXTRACT_TEXINFO_IN_SRCDIR invokation of 
		extract_texinfo.awk suitable in scripts that cd $(srcdir) first
	  configure.ac: AC_CONFIG_COMMANDS to make auxiliary build directories


2007-08-14	David Fang	<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-81-49-merged-chpsim-07-08:
	  Merged -chpsim-07 branch.


2007-08-14	David Fang	<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-81-48-merged-parser-05-03:
	  Merged -parser-05 branch.


2007-08-12	David Fang	<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-81-46-chpsim-07-07:
	  configure.ac: make test/chpsim/libinstalltest/Makefile


	* HACKT-00-01-04-main-00-81-46-chpsim-07-06:
	  configure.ac: replace docs/chpsim/figs/build_path with .dirstamp
	  hackt-config.in: use datarootdir


2007-08-11	David Fang	<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-81-46-chpsim-07-05:
	  Added scripts/extract_texinfo.awk.  Guess what it does.
	  Make.stddef: use extract_texinfo.awk


2007-08-08	David Fang	<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-81-45:
	  Make.global: more echo-* targets listed under help.


	* HACKT-00-01-04-main-00-81-44:
	  Make.stddef: directory variables moved to ...
	  installdirs.mk: some additional installation subdirectories, 
		intended as post-configure variables, for convenience.  
	  Makefile.am: distribute installdirs.mk


2007-07-31	David Fang	<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-81-41-merged-chpsim-06-26:
	  Branch merge of chpsim-06 branch: chpsim run-time function support.
	  Also includes some system-wide additions: