@@ -1,9 +1,9 @@
 # "lib-conditional-test-a-01.chpsimrc"
-#	$Id: lib-zcond-test-a-01.chpsimrc,v 1.2 2007/08/15 02:49:58 fang Exp $
+#	$Id: lib-zcond-test-a-01.chpsimrc,v 1.3 2007/08/19 04:00:42 fang Exp $
 # @haco@ lib-zcond-test-a.haco-a
 # Use the *built* library for this test (as opposed to installed)
 # @module@ -fno-ack-loaded-fns -L../../lib -lstdchpfn
-# @deps@ ../../lib/libstdchpfn.la
+# @deps@ ../../lib/stdchpfn.la
 
 watchall-events
 watch-value Z
