@@ -1,6 +1,17 @@
 # "test/ChangeLog"
-#	$Id: ChangeLog,v 1.74 2007/08/17 22:20:34 fang Exp $
+#	$Id: ChangeLog,v 1.75 2007/08/19 04:00:39 fang Exp $
 # ChangeLog for test directory.
+
+2007-08-18	David Fang		<fangism@users.sourceforge.net>
+
+	* HACKT-00-01-04-main-00-81-57:
+	  Critical patch for Darwin.
+	  Make.test-chpsim: construct environment with dynamic library 
+		search path agumented to point to CHPSIM_LIB_PATH
+		when testing modules with additional dependent 
+		shared libraries (e.g. in lib/).
+	  chpsim/Makefile.am: point CHPSIM_LIB_PATH to ../../lib
+
 
 2007-08-17	David Fang		<fangism@users.sourceforge.net>
 
